styles.css
/* ? Color Variables */
:root {
  --primary-theme-color: #dc143c;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: var(--primary-theme-color);
}

html {
  font-size: 10px;
  font-family: 'Montserrat', sans-serif;
}

img {
  height: 100%;
  object-fit: cover;
}

input {
  display: block;
  font-family: 'Montserrat', sans-serif;
}
p {
  font-size: 1.4rem;
  margin-top: 5px;
  line-height: 2.5rem;
  font-weight: 300;
  letter-spacing: 0.05rem;
  color: black;
}

.container {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.section-title {
  font-size: 3rem;
  font-weight: 300;
  color: black;
  margin-bottom: 10px;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  text-align: center;
}

.section-title span {
  color: var(--primary-theme-color);
}

/* ?Hero Section Styling */
#hero {
  background-image: url(./images/hero-bg.png);
  background-size: cover;
  background-position: top center;
  position: relative;
  z-index: 1;
}

#hero::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: 0.65;
  z-index: -1;
}

#hero h1 {
  font-size: 2.3rem;
  line-height: 3.6rem;
  margin-bottom: 1rem;
  width: fit-content;
  position: relative;
  color: transparent;
  animation: reveal-text 0.5s ease forwards;
  animation-delay: 1s;
}

#hero h1:nth-child(1) {
  animation-delay: 1s;
}

#hero h1:nth-child(2) {
  animation-delay: 2s;
}

#hero h1:nth-child(3) {
  animation: reveal-name 0.5s ease forwards;
  animation-delay: 3s;
}

#hero h1 span {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background-color: var(--primary-theme-color);
  animation: show-text 1s ease;
  animation-delay: 0.3s;
}

#hero h1:nth-child(1) span {
  animation-delay: 0.5s;
}

#hero h1:nth-child(2) span {
  animation-delay: 1.5s;
}

#hero h1:nth-child(3) span {
  animation-delay: 2.5s;
}

.hero {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 50px;
  justify-content: flex-start;
}

.portfolio-button {
  display: inline-block;
  margin: 3rem 0;
  padding: 8px 16px;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: var(--primary-theme-color);
  background-color: transparent;
  border: 2px solid var(--primary-theme-color);
  transition: 0.3s all ease;
  cursor: pointer;
}

.portfolio-button:hover {
  background-color: var(--primary-theme-color);
  color: white;
}

/* ? Color Theme Selector */
.color-selector {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  position: absolute;
  bottom: 10%;
  left: 50%;
  transform: translateX(-50%);
}
.color-selector p {
  color: white;
  font-size: 20px;
}
.color-selector span {
  width: 20px;
  height: 20px;
  border-radius: 50%;
}
label[for='input-color-picker'] {
  color: white;
  font-size: 20px;
}

/* ? Services Section Styling */
.services {
  flex-direction: column;
  text-align: center;
  max-width: 1500px;
  margin: 0 auto;
  justify-content: space-around;
  text-align: center;
}

.service-bottom {
  height: 70%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  gap: 20px;
}

.service-item {
  flex-basis: 80%;
  /* height: 180px; */
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: column;
  padding: 20px;
  background-image: url('./images/img-1.png');
  background-size: cover;
  border-radius: 10px;
  position: relative;
  z-index: 1;
}

.service-item::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-image: linear-gradient(60deg, #29323c, #485563 100%);
  opacity: 0.8;
  border-radius: 10px;
  z-index: -1;
}

.service-item h2 {
  color: var(--primary-theme-color);
  font-size: 2rem;
  text-transform: uppercase;
  margin-bottom: 15px;
  font-weight: 700;
}

.service-item p {
  color: white;
  text-align: left;
}
.service-item .icon {
  height: 50px;
  width: 50px;
  margin-bottom: 20px;
}

/* ? Project Section Styling */
.projects {
  flex-direction: column;
  text-align: center;
  max-width: 1500px;
  margin: 0 auto;
  justify-content: space-around;
  text-align: center;
}

.projects-header {
  margin: 50px 0;
}

.all-projects {
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
}

.project-item {
  height: 30%;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  overflow: hidden;
  border-radius: 10px;
  /* gap: 10px; */
}

.project-info {
  padding: 20px;
  flex-basis: 50%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
}

.project-title {
  color: var(--primary-theme-color);
  margin-bottom: 10px;
  font-size: 2rem;
}

.project-languages {
  color: white;
  margin-bottom: 10px;
  font-size: 1.2rem;
}

.project-description {
  color: white;
  font-weight: 300;
}

.project-image {
  flex-basis: 50%;
  height: 300px;
  overflow: hidden;
}

.project-image img {
  transition: transform 0.3s ease;
  width: 100%;
}
.project-image:hover img {
  transform: scale(1.1);
}

/* ? About Section Styling */
.about {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  max-width: 1200px;
  text-align: center;
  margin: 0 auto;
  padding: 100px 20px;
}
.col-left {
  width: 250px;
  height: 360px;
}

.col-right {
  width: 100%;
}

.col-right h2 {
  letter-spacing: 0.5rem;
  margin-bottom: 10px;
}
.about-img {
  width: 100%;
  position: relative;
  z-index: 1;
}

.about-img::after {
  content: '';
  position: absolute;
  left: -30px;
  top: 20px;
  height: 98%;
  width: 98%;
  border: 5px solid var(--primary-theme-color);
  z-index: -1;
}
.about-img img {
  width: 100%;
  border: 7px solid white;
}

/* ? Contact Me Section Styling */
#contact {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}
form {
  flex-basis: 80%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

form input {
  width: 90%;
  height: 4rem;
  padding: 1rem;
}
textarea {
  height: 35%;
  width: 90%;
  padding: 1rem;
  font-family: 'Montserrat', sans-serif;
}

.subscribe {
  width: 90%;
  margin: 10px;
}
.subscribe-yes {
  width: 40%;
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
}

#yes {
  width: 16px;
}
.subscribe-no {
  width: 40%;
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
}

#no {
  width: 16px;
}

.subscribe-inputs {
  width: 60%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

/* ? Start Contact Information Styling */
.contact-information {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.contact-items {
  height: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

.contact-item {
  display: flex;
  width: 50%;
  height: 130px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  -webkit-box-shadow: 3px 1px 14px 2px rgba(166, 166, 166, 0.78);
  box-shadow: 3px 1px 14px 2px rgba(166, 166, 166, 0.78);
  border-radius: 10px;
  transition: transform 0.3s ease;
  cursor: pointer;
}

.contact-item:hover {
  transform: scale(1.1);
}

.contact-icon {
  width: 15%;
  margin-bottom: 10px;
}

.contact-icon img {
  width: 100%;
}

.contact-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  line-height: 1.5;
}

.contact-info h3 {
  font-weight: 300;
}

/* ? Start Footer Styling */
footer {
  margin-top: 20px;
  height: 25%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
  padding: 16px;
}

footer .section-title {
  color: white;
  font-size: 28px;
}

footer h3 {
  color: white;
}

footer p {
  color: white;
  font-weight: 300;
}
.social-links {
  width: 70%;
  margin: 0 auto;
  height: 60%;
  display: flex;
  align-items: center;
}

.social-links a {
  text-align: center;
}

.social-links img {
  width: 30%;
}
/* ? Keyframe Animations */
/* .animate {
  animation: show-text 1s ease;
  animation: reveal-text 0.5s ease forwards;
  animation: reveal-name 0.5s ease forwards;
} */
@keyframes show-text {
  50% {
    width: 100%;
    left: 0;
  }
  100% {
    width: 0;
    left: 100%;
  }
}

@keyframes reveal-text {
  100% {
    color: white;
  }
}

@keyframes reveal-name {
  100% {
    color: var(--primary-theme-color);
    font-weight: 700;
  }
}

/* # Media Query for Tablets */
@media only screen and (min-width: 768px) {
  /* ? Hero Section Styling */
  #hero h1 {
    font-size: 4rem;
  }

  /* ? Global Styles */
  .portfolio-button {
    font-size: 2.2rem;
    letter-spacing: 0.2rem;
  }

  .section-title {
    font-size: 5rem;
  }

  /* ? Project Section Styling */
  .all-projects {
    gap: 0;
  }
  .project-item {
    flex-direction: row;
  }

  .project-item:nth-child(even) {
    flex-direction: row-reverse;
  }

  .project-item {
    height: 400px;
    margin: 0;
    width: 100%;
    border-radius: 0;
  }

  .project-info {
    height: 100%;
    display: flex;
    justify-content: space-around;
  }

  .project-title {
    font-size: 28px;
  }

  .project-languages {
    font-size: 20px;
  }

  .project-description {
    font-size: 18px;
    line-height: 3.5rem;
  }
  .project-image {
    height: 100%;
  }

  /* ? About Me Styling */
  .about {
    flex-direction: row;
    align-items: center;
  }

  .col-left {
    flex-basis: 50%;
    width: 600px;
    height: 500px;
    padding-left: 60px;
  }

  .col-right {
    text-align: left;
    padding: 30px;
    display: flex;
    flex-direction: column;
    align-items: left;
  }

  .col-right h1 {
    width: 100%;
    text-align: left;
  }

  .col-right h2 {
    font-size: 24px;
  }

  .col-right p {
    font-size: 22px;
    line-height: 4.5rem;
  }
  .col-right .portfolio-button {
    width: 200px;
    align-self: center;
  }

  /* ? Contact Me Styling */
  form {
    padding: 10px;
    width: 70%;
  }

  .subscribe {
    font-size: 20px;
    text-align: center;
  }

  label {
    font-size: 16px;
  }

  #contact-submit {
    width: 250px;
    height: 6rem;
  }

  /* ? Contact Information Styling */
  .contact-items {
    width: 80%;
    max-width: 1200px;
    flex-direction: row;
    justify-content: space-between;
  }

  .contact-item {
    width: 28%;
    height: 40%;
  }

  .contact-info h2 {
    font-size: 20px;
  }

  .contact-info h3 {
    font-size: 18px;
    /* font-weight: 300; */
  }
}

